--- a/texts/texts.j2
+++ b/texts/texts.j2
@@ -1,5 +1,5 @@
 <p>
-    {% if ans1 %}
+    {% if open_event %}
         <span>Похоже, что вы знаете всех потенциальных участников</span>,
         (дальше зависит от вида активности)
     {% else %}
@@ -15,31 +15,38 @@
 </p>
 
 <p>
-<span>Публикация информации о мероприятии с личного аккаунта</span>
-может быть как хорошей идеей, так и очень плохой, все зависит от контекста. Если вы медийная личность,
-ваша известность может вас защищать и гарантировать доверие лояльной аудитории,
-но для большинства непубличных людей это может нести больше рисков.
-В зависимости от того, какой ивент и на какую аудитория вы анонсируете,
-на объявление может слететься разное количество недоброжелателей,
-а в некоторых случаях можно ждать визита полиции или сотрудников центра “Э”.
-Личный аккаунт легко связать с владельцем: узнать связанные
-с ним номера телефонов, найти другие соцсети по фотографиям профиля. 
-{% if ans6 or ans5 or ans4 %}
-    Помните, что участие в мероприятии и его организация –
-    разные степени ответственности, не дарите ментам лишнюю звездочку на погоны.
+{% if open_event %}
+    <span>Публикация информации о мероприятии с личного аккаунта</span>
+    может быть как хорошей идеей,
+    так и очень плохой, все зависит от контекста. Если вы медийная личность,
+    ваша известность может гарантировать доверие лояльной аудитории,
+    но для большинства непубличных людей это может нести больше рисков,
+    привлекая внимание недоброжелателей
+    {% if trigger_theme or arrests or trigger_title %}
+        В некоторых случаях можно ждать визита полиции или сотрудников центра “Э”.
+        Личный аккаунт легко связать с владельцем: узнать связанные с ним номера
+        телефонов, найти другие соцсети по фотографиям профиля.
+        Помните, что участие в мероприятии и его организация –
+        разные степени ответственности, не дарите ментам лишнюю звездочку на погоны.
+    {% endif %}
+{% else %}
+    <span>Если вы анонсируете ивент анонимно</span>,
+    потенциальным недоброжелателям будет труднее вас достать,
+    а значит безопасность повышается! С другой стороны, вам может быть тяжелее привлечь
+    аудиторию. Сопоставляйте личные риски с потенциальной пользой. 
 {% endif %}
 </p>
 
 <p>
-{% if ans3 %}
-    {% if trigger %}
+{% if participant_db %}
+    {% if trigger_theme %}
         <span>Итак, вы храните данные об участниках.</span>
         Имейте в виду, что в случае вашего задержания,
         все эти люди могут оказаться в опасности, если полиция получит доступ к вашим устройствам.
         Рекомендуем не хранить чувствительные данные, либо хранить их в зашифрованном виде — например,
         на сервисе Cpryptpad можно создать документ с паролем и датой уничтожения. 
     {% endif %}
-    {% if trigger %}
+    {% if trigger_theme %}
         Если у вас с участни:цами есть чат в телеграме,
     {% else %}
         <span>Если у вас с участни:цами есть чат в телеграме,</span>
@@ -48,7 +55,7 @@
     авторизацию (она не защитит вас от кражи аккаунта,
     но злоумышленники не получат доступ к вашим перепискам,
     если зайдут с другого устройства).
-    {% if trigger %}
+    {% if trigger_theme %}
         Если предполагается анонимность участников, телеграм лучше не использовать,
         установите Element или Signal.
     {% endif %}
@@ -67,7 +74,7 @@
     зайдут с другого устройства).Регулярно проверяйте подключенные
     устройства в своих аккаунтах, если видите в списке незнакомое —
     отключите, смените пароли.
-    {% if trigger %}
+    {% if trigger_theme %}
         Помните о том, что если вашими мероприятиями заинтересуется
         полиция, списки состоящих в чате или группе людей могут
         стать потенциально опасной информацией,
@@ -78,7 +85,7 @@
 </p>
 
 <p>
-{% if ans4 %}
+{% if trigger_title %}
     Мы думаем, вы и без нас знаете, что <span>названия, содержащие
     такие слова как “феминизм”, “ЛГБТ”, “антивоенный” и т.п.</span>
     в сегодняшней России привлекают много внимания,
@@ -92,7 +99,7 @@
 </p>
 
 <p>
-{% if ans5 %}
+{% if arrests %}
     <span>Если вы знаете о случаях, когда на подобные ивенты приходила полиция</span>,
     были задержания или даже аресты, то это как раз тот случай,
     когда о безопасности стоит позаботиться всерьез:
@@ -143,13 +150,13 @@
 </p>
 
 <p>
-{% if ans6 %}
+{% if trigger_theme %}
     <span>Итак, вы собрались активистить!</span>
     Жмём руку. К сожалению, абсолютно никакой активизм в РФ сейчас
     не может считаться безопасным. У нас есть совершенно
     дикие истории ареста за радужные сережки,
     посадки за антивоенные ценники и многое другое.
-    {% if not ans5 %}
+    {% if not arrests %}
         <ul>
         <li> Верифицируйте участни:ц! 
             Мы убедительно просим вас не заниматься или даже не говорить
