--- a/texts/texts.j2
+++ b/texts/texts.j2
@@ -1,6 +1,6 @@
 <p>
-    {% if open_event %}
-        <span>Похоже, что вы знаете всех потенциальных участников</span>
+    {% if closed_event %}
+        <span>Похоже, что вы знаете всех потенциальных участни:ц!</span>
     {% else %}
         <span>Похоже, что вы открыты к новым знакомствам!</span> 
         Это здорово. В любом случае, стоит морально подготовиться к тому,
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-{% if open_event %}
+{% if public_announce %}
     <span>Публикация информации о мероприятии с личного аккаунта</span>
     может быть как хорошей идеей,
     так и очень плохой, все зависит от контекста. Если вы медийная личность,
@@ -39,45 +39,45 @@
 <p>
 {% if participant_db %}
     {% if trigger_theme %}
-        <span>Итак, вы храните данные об участниках.</span>
-        Имейте в виду, что в случае вашего задержания,
-        все эти люди могут оказаться в опасности, если полиция получит доступ к вашим устройствам.
-        Рекомендуем не хранить чувствительные данные, либо хранить их в зашифрованном виде — например,
+         <span>Сохраняя личные данные участни:ц</span>,
+        стоит понимать, что в случае вашего задержания, все эти люди могут оказаться в опасности,  
+        если полиция получит доступ к вашим устройствам.
+        Рекомендуем не хранить чувствительные данные, либо хранить их в зашифрованном виде: например,
         на сервисе Cpryptpad можно создать документ с паролем и датой уничтожения. 
     {% endif %}
     {% if trigger_theme %}
-        Если у вас с участни:цами есть чат в телеграме,
+        Если у вас с участни:цами есть чат в телеграме, 
     {% else %}
-        <span>Если у вас с участни:цами есть чат в телеграме,</span>
+        <span>Если у вас с участни:цами есть чат в телеграме, </span>
     {% endif %}
     лучше настроить автоудаление истории сообщений и двухфакторную
     авторизацию (она не защитит вас от кражи аккаунта,
     но злоумышленники не получат доступ к вашим перепискам,
-    если зайдут с другого устройства).
+    если зайдут с другого устройства). 
     {% if trigger_theme %}
         Если предполагается анонимность участников, телеграм лучше не использовать,
-        установите Element или Signal.
+        установите Element или Signal. 
     {% endif %}
     Регулярно проверяйте подключенные
     устройства в своих аккаунтах, если видите в списке незнакомое —
-    отключите, смените пароли.
+    отключите, смените пароли. 
 {% else %}
     <span>Вы не храните данные об участни:цах.</span>
     Это хорошо: нет данных – нет проблем :)
     Помните о том, что группы в соцсетях и чаты в мессенджерах
-    с участни:цами –  тоже какая-то ненулевая информация.
+    –  тоже какая-то ненулевая информация.
     Если у вас с участни:цами есть чат в телеграме,
     лучше настроить автоудаление истории сообщений и
     двухфакторную авторизацию (она не защитит вас от кражи аккаунта,
     но злоумышленники не получат доступ к вашим перепискам, если
-    зайдут с другого устройства).Регулярно проверяйте подключенные
+    зайдут с другого устройства). Регулярно проверяйте подключенные
     устройства в своих аккаунтах, если видите в списке незнакомое —
     отключите, смените пароли.
     {% if trigger_theme %}
-        Помните о том, что если вашими мероприятиями заинтересуется
+        Помните: если вашими мероприятиями заинтересуется
         полиция, списки состоящих в чате или группе людей могут
         стать потенциально опасной информацией,
-        привлечь внимание органов к тем людям, кто, может быть,
+        привлечь внимание органов к тем людям, кто, может быть, 
         раньше не попадал в их поле зрения.
     {% endif %}
 {% endif %}
@@ -90,30 +90,34 @@
     в сегодняшней России привлекают много внимания,
     в том числе нежелательного! Мы, конечно, вам ничего запрещать
     не можем и не будем, но помните, что риск появления полиции
-    или эшников на таких ивентах возрастает в разы. 
+    или <a href=https://meduza.io/feature/2019/08/23/chto-sotrudniki-tsentra-e-delayut-na-mitingah-pochemu-oni-vse-odinakovye-otkuda-berutsya-dela-za-reposty>эшников</a>
+    на таких ивентах возрастает в разы. 
 {% else %}
-    <span>Похоже, что вы решили не привлекать к себе излишнее внимание названием</span>,
+    <span>Похоже, что вы решили не привлекать к себе излишнее внимание названием</span>, 
     и поэтому мы можем волноваться за вашу безопасность немножко меньше &lt3
 {% endif %}
 </p>
 
-<p>
 {% if arrests %}
-    <span>Если вы знаете о случаях, когда на подобные ивенты приходила полиция</span>,
+    <p>
+    <span>Если вы знаете, что на подобные ивенты уже приходила полиция</span>,
     были задержания или даже аресты, то это как раз тот случай,
     когда о безопасности стоит позаботиться всерьез:
     <ul>
     <li> Верифицируйте участни:ц! 
         Мы убедительно просим вас не заниматься или даже не говорить
-        о такихвещах с теми, кого вы не знаете лично, или теми,
+        о таких вещах с теми, кого вы не знаете лично, или теми,
         у кого нет хороших рекомендаций от проверенных людей.
-        Рассылайте адрес и время ивента уже проверенным участни:цам.
+        Рассылайте адрес и время ивента уже проверенным участни:цам, 
+        не публикуйте эти данные открыто.
         Помните о случаях, когда менты втирались в доверие к людям 
-        в соцсетях и подталкивали в сторону совершения противозаконных
+        в соцсетях и подталкивали к совершению противозаконных
         действий, убеждая задонатить ВСУ, поджечь военкомат,
         или распространить “фейки” про российскую армию,
         а затем сами же шили из этого дело. Будьте бдительны. </li>
-    <li> Убедитесь, что вы выполнили все инструкции отсюда и убедительно
+    <li> Убедитесь, что вы выполнили все инструкции
+        <a href=https://cryptpad.fr/pad/#/2/pad/edit/Uk1nCFBbRWWuFSA59tECZ4JL>
+        отсюда </a> и убедительно
         призовите всех участни:ц также им следовать. Это важно. Объясните
         всем, что если полиция получает доступ к устройствам одной из
         вас – она получает доступ ко всем через ваши общие чаты.
@@ -132,21 +136,27 @@
         никакую съемку, или по крайней мере убедиться,
         что в кадр не попадают лица участников. </li>
     </ul>
-    Помните, что все вышеперечисленные действия не страхуют вас на 100%
-    от визита Эшников или полиции *сюда вставить
-    ту статью о внедренном в какую-то школу волонтеров менте,
-    который чуть ли не лучший студент был несколько лет и все с ним дружили*.
+    Помните, что все вышеперечисленные действия
+    <a href=https://theins.press/politika/268859> не страхуют вас на 100% </a>
+    от визита эшников или полиции.
+    </p>
 {% else %}
-    <span>Арестов и задержаний на подобных ивентах не было</span>, или по крайней мере
-    вы о них не знаете. Мы с вами понимаем, что ответ “нет” может в
-    скором времени перестать быть актуальным (нелепые задержания по самым
-    разным поводам только набирают обороты). Даже если вы уверены, что
-    ваше мероприятие безобидное и не вызовет интерес силовиков,
-    мы искренне убеждены в том, что меры безопасности,
-    перечисленные в начале этого документа, — это то, что
-    неплохо бы использовать каждо:й в сегодняшней России.
+
+    {% if trigger_theme %}
+        <p>
+        <span>Арестов и задержаний на подобных ивентах не было</span>, или по крайней мере
+        вы о них не знаете. Мы с вами понимаем, что ответ “нет” может в
+        скором времени перестать быть актуальным (нелепые задержания по самым
+        разным поводам только набирают обороты). Даже если вы уверены, что
+        ваше мероприятие безобидное и не вызовет интерес силовиков,
+        мы искренне убеждены в том, что меры безопасности,
+        перечисленные в начале этого документа, — это то, что
+        неплохо бы использовать каждо:й в сегодняшней России.
+        </p>
+    {% endif %}
+
 {% endif %}
-</p>
+
 
 <p>
 {% if trigger_theme %}
@@ -155,19 +165,23 @@
     не может считаться безопасным. У нас есть совершенно
     дикие истории ареста за радужные сережки,
     посадки за антивоенные ценники и многое другое.
+
     {% if not arrests %}
         <ul>
         <li> Верифицируйте участни:ц! 
             Мы убедительно просим вас не заниматься или даже не говорить
-            о такихвещах с теми, кого вы не знаете лично, или теми,
+            о таких вещах с теми, кого вы не знаете лично, или теми,
             у кого нет хороших рекомендаций от проверенных людей.
-            Рассылайте адрес и время ивента уже проверенным участни:цам.
+            Рассылайте адрес и время ивента уже проверенным участни:цам, 
+            не публикуйте эти данные открыто.
             Помните о случаях, когда менты втирались в доверие к людям 
-            в соцсетях и подталкивали в сторону совершения противозаконных
+            в соцсетях и подталкивали к совершению противозаконных
             действий, убеждая задонатить ВСУ, поджечь военкомат,
             или распространить “фейки” про российскую армию,
             а затем сами же шили из этого дело. Будьте бдительны. </li>
-        <li> Убедитесь, что вы выполнили все инструкции отсюда и убедительно
+        <li> Убедитесь, что вы выполнили все инструкции
+            <a href=https://cryptpad.fr/pad/#/2/pad/edit/Uk1nCFBbRWWuFSA59tECZ4JL>
+            отсюда</a> и убедительно
             призовите всех участни:ц также им следовать. Это важно. Объясните
             всем, что если полиция получает доступ к устройствам одной из
             вас – она получает доступ ко всем через ваши общие чаты.
@@ -186,23 +200,35 @@
             никакую съемку, или по крайней мере убедиться,
             что в кадр не попадают лица участников. </li>
         </ul>
-        Помните, что все вышеперечисленные действия не страхуют вас на 100%
-        от визита Эшников или полиции *сюда вставить
-        ту статью о внедренном в какую-то школу волонтеров менте,
-        который чуть ли не лучший студент был несколько лет и все с ним дружили*.
+        Помните, что все вышеперечисленные действия
+        <a href=https://theins.press/politika/268859> не страхуют вас на 100% </a>
+        от визита эшников или полиции.
+        </p>
     {% endif %}
 {% else %}
-    <span>Поздравляем, вы запланировали раскайфовку!</span>
-    Это значит, что вам можно не заморачиваться
-    сильно ни с выбором места проведения,
-    ни с верификацией участни:ц, ни с анонимностью чатов.
-    Желаем вам хорошо провести время :) На всякий случай,
-    рекомендуем не одеваться в одежду триггерных цветов (радуга, сине-желтый),
-    не брать с собой антивоенную, фем-, ЛГБТ+ символику и агитматериалы.
-    Вы собрались на целиком законное не подозрительное мероприятие,
-    не дарите ментам повод его сорвать. Мы считаем,
-    что рекомендации из первой части этого документа будут
-    полезны абсолютно всем, и крайне рекомендуем
-    обезопасить свои устройства, прочитать инструкции ОВД-инфо и знать свои права.
+
+    {% if not arrests %}
+        <span>Похоже, в ваших планах устроить раскайфовку!</span>
+
+        {% if closed_event %}
+            Это значит, что вам можно не заморачиваться сильно
+            ни с выбором места проведения, ни с анонимностью чатов
+        {% else %}
+            Это значит, что вам можно не заморачиваться сильно
+            ни с выбором места проведения, ни с верификацией участни:ц,
+            ни с анонимностью чатов.
+        {% endif %}
+        
+        На всякий случай, рекомендуем не одеваться в одежду
+        триггерных цветов (радуга, сине-желтый), не брать с
+        собой антивоенную, фем-, ЛГБТ+ символику и агитматериалы.
+        Вы собрались на целиком законное не подозрительное мероприятие,
+        не дарите ментам повод его сорвать. Мы считаем,
+        что рекомендации из первой части этого документа будут
+        полезны абсолютно всем, и крайне рекомендуем обезопасить
+        свои устройства, прочитать инструкции ОВД-инфо и знать свои права.
+        Желаем вам хорошо провести время :)
+    {% endif %}
+
 {% endif %}
 </p>
