--- a/texts/texts.j2
+++ b/texts/texts.j2
@@ -22,11 +22,11 @@
     но для большинства непубличных людей это может нести больше рисков,
     привлекая внимание недоброжелателей
     {% if trigger_theme or arrests or trigger_title %}
-        В некоторых случаях можно ждать визита полиции или сотрудников центра “Э”.
-        Личный аккаунт легко связать с владельцем: узнать связанные с ним номера
+        В некоторых случаях можно ждать визита полиции или <a href =https://meduza.io/feature/2019/08/23/chto-sotrudniki-tsentra-e-delayut-na-mitingah-pochemu-oni-vse-odinakovye-otkuda-berutsya-dela-za-reposty> сотрудников центра “Э</a>, в народе известных как "эшники".
+        <br>Личный аккаунт легко связать с владельцем: узнать связанные с ним номера
         телефонов, найти другие соцсети по фотографиям профиля.
         Помните, что участие в мероприятии и его организация –
-        разные степени ответственности, не дарите ментам лишнюю звездочку на погоны.
+        разные степени ответственности, не облегчайте ментам работу по доказательству того, что вы и есть организатор.
     {% endif %}
 {% else %}
     <span>Если вы анонсируете ивент анонимно</span>,
@@ -40,7 +40,7 @@
 {% if participant_db %}
     {% if trigger_theme %}
          <span>Сохраняя личные данные участни:ц</span>,
-        стоит понимать, что в случае вашего задержания, все эти люди могут оказаться в опасности,  
+        стоит понимать, что все эти люди могут оказаться в опасности в случае вашего задержания  
         если полиция получит доступ к вашим устройствам.
         Рекомендуем не хранить чувствительные данные, либо хранить их в зашифрованном виде: например,
         на сервисе Cpryptpad можно создать документ с паролем и датой уничтожения. 
@@ -83,6 +83,16 @@
 {% endif %}
 </p>
 
+{% if trigger_theme %}
+<p>
+    <span>Итак, вы собрались активистить!</span>
+    Жмём руку. К сожалению, абсолютно никакой активизм в РФ сейчас
+    не может считаться безопасным. У нас есть совершенно
+    дикие истории ареста за радужные сережки,
+    посадки за антивоенные ценники и многое другое.
+</p>
+{% endif %}
+
 <p>
 {% if trigger_title %}
     Мы думаем, вы и без нас знаете, что <span>названия, содержащие
@@ -98,7 +108,7 @@
 {% endif %}
 </p>
 
-{% if arrests %}
+{% if arrests or trigger_theme  %}
     <p>
     <span>Если вы знаете, что на подобные ивенты уже приходила полиция</span>,
     были задержания или даже аресты, то это как раз тот случай,
@@ -139,6 +149,7 @@
     Помните, что все вышеперечисленные действия
     <a href=https://theins.press/politika/268859> не страхуют вас на 100% </a>
     от визита эшников или полиции.
+    <br>Желаем удачи!
     </p>
 {% else %}
 
@@ -158,77 +169,28 @@
 {% endif %}
 
 
+
+{% if not trigger_theme and not arrests %}
 <p>
-{% if trigger_theme %}
-    <span>Итак, вы собрались активистить!</span>
-    Жмём руку. К сожалению, абсолютно никакой активизм в РФ сейчас
-    не может считаться безопасным. У нас есть совершенно
-    дикие истории ареста за радужные сережки,
-    посадки за антивоенные ценники и многое другое.
+    <span>Похоже, в ваших планах устроить раскайфовку!</span>
 
-    {% if not arrests %}
-        <ul>
-        <li> Верифицируйте участни:ц! 
-            Мы убедительно просим вас не заниматься или даже не говорить
-            о таких вещах с теми, кого вы не знаете лично, или теми,
-            у кого нет хороших рекомендаций от проверенных людей.
-            Рассылайте адрес и время ивента уже проверенным участни:цам, 
-            не публикуйте эти данные открыто.
-            Помните о случаях, когда менты втирались в доверие к людям 
-            в соцсетях и подталкивали к совершению противозаконных
-            действий, убеждая задонатить ВСУ, поджечь военкомат,
-            или распространить “фейки” про российскую армию,
-            а затем сами же шили из этого дело. Будьте бдительны. </li>
-        <li> Убедитесь, что вы выполнили все инструкции
-            <a href=https://cryptpad.fr/pad/#/2/pad/edit/Uk1nCFBbRWWuFSA59tECZ4JL>
-            отсюда</a> и убедительно
-            призовите всех участни:ц также им следовать. Это важно. Объясните
-            всем, что если полиция получает доступ к устройствам одной из
-            вас – она получает доступ ко всем через ваши общие чаты.
-            Ваша цифровая безопасность нужна не только для вас, она защищает
-            всех людей, с которыми вы связаны.  Пусть все установят бот
-            ОВД-инфо и прочитают “инструкцию идеального задержанного”. </li>
-        <li> Выбирайте место проведения ивента с умом. Вам не подойдут
-            открытые площадки, ищите те, где владельцы придерживаются
-            схожих с вами взглядов, и нет посторонних глаз.
-            Хороший вариант – собраться у кого-нибудь дома. </li>
-        <li> Не берите с собой никакую символику, листовки,
-            не одевайтесь в триггерные цвета (радуга, жёлто-голубой).
-            Не дарите ментам фактуру, которую можно будет положить в основу дела. </li> 
-        <li> Фото или видео с мероприятия могут привлечь внимание полиции
-            или особо бдительных граждан: безопаснее всего будет не вести
-            никакую съемку, или по крайней мере убедиться,
-            что в кадр не попадают лица участников. </li>
-        </ul>
-        Помните, что все вышеперечисленные действия
-        <a href=https://theins.press/politika/268859> не страхуют вас на 100% </a>
-        от визита эшников или полиции.
-        </p>
+    {% if closed_event %}
+        Это значит, что вам можно не заморачиваться сильно
+        ни с выбором места проведения, ни с анонимностью чатов.
+    {% else %}
+        Это значит, что вам можно не заморачиваться сильно
+        ни с выбором места проведения, ни с верификацией участни:ц,
+        ни с анонимностью чатов.
     {% endif %}
-{% else %}
-
-    {% if not arrests %}
-        <span>Похоже, в ваших планах устроить раскайфовку!</span>
-
-        {% if closed_event %}
-            Это значит, что вам можно не заморачиваться сильно
-            ни с выбором места проведения, ни с анонимностью чатов
-        {% else %}
-            Это значит, что вам можно не заморачиваться сильно
-            ни с выбором места проведения, ни с верификацией участни:ц,
-            ни с анонимностью чатов.
-        {% endif %}
-        
-        На всякий случай, рекомендуем не одеваться в одежду
-        триггерных цветов (радуга, сине-желтый), не брать с
-        собой антивоенную, фем-, ЛГБТ+ символику и агитматериалы.
-        Вы собрались на целиком законное не подозрительное мероприятие,
-        не дарите ментам повод его сорвать. Мы считаем,
-        что рекомендации из первой части этого документа будут
-        полезны абсолютно всем, и крайне рекомендуем обезопасить
-        свои устройства, прочитать инструкции ОВД-инфо и знать свои права.
-        Желаем вам хорошо провести время :)
-    {% endif %}
-
-{% endif %}
+    
+    На всякий случай, рекомендуем не одеваться в одежду
+    триггерных цветов (радуга, сине-желтый), не брать с
+    собой антивоенную, фем-, ЛГБТ+ символику и агитматериалы.
+    Вы собрались на целиком законное не подозрительное мероприятие,
+    не дарите ментам повод его сорвать. Мы считаем,
+    что рекомендации из первой части этого документа будут
+    полезны абсолютно всем, и крайне рекомендуем обезопасить
+    свои устройства, прочитать инструкции ОВД-инфо и знать свои права.
+    Желаем вам хорошо провести время :)
 </p>
+{% endif %}
