--- a/texts/texts.j2
+++ b/texts/texts.j2
@@ -3,7 +3,7 @@
         <span>Похоже, что вы знаете всех потенциальных участни:ц!</span>
     {% else %}
         <span>Похоже, что вы открыты к новым знакомствам!</span> 
-        Это здорово. В любом случае, стоит морально подготовиться к тому,
+        Это здорово. Стоит морально подготовиться к тому,
         что к вам могут прийти разные люди. Возможно,
         не все из них разделяют ваши ценности и убеждения, некоторые могут быть тяжелыми в общении.
         Учитывая ситуацию в стране, может быть рискованно рассказывать
@@ -17,7 +17,7 @@
 {% if public_announce %}
     <span>Публикация информации о мероприятии с личного аккаунта</span>
     может быть как хорошей идеей,
-    так и очень плохой, все зависит от контекста. Если вы медийная личность,
+    так и очень плохой: все зависит от контекста. Если вы медийная личность,
     ваша известность может гарантировать доверие лояльной аудитории,
     но для большинства непубличных людей это может нести больше рисков,
     привлекая внимание недоброжелателей
@@ -51,9 +51,7 @@
         <span>Если у вас с участни:цами есть чат в телеграме, </span>
     {% endif %}
     лучше настроить автоудаление истории сообщений и двухфакторную
-    авторизацию (она не защитит вас от кражи аккаунта,
-    но злоумышленники не получат доступ к вашим перепискам,
-    если зайдут с другого устройства). 
+    авторизацию. 
     {% if trigger_theme %}
         Если предполагается анонимность участников, телеграм лучше не использовать,
         установите Element или Signal. 
@@ -68,9 +66,7 @@
     –  тоже какая-то ненулевая информация.
     Если у вас с участни:цами есть чат в телеграме,
     лучше настроить автоудаление истории сообщений и
-    двухфакторную авторизацию (она не защитит вас от кражи аккаунта,
-    но злоумышленники не получат доступ к вашим перепискам, если
-    зайдут с другого устройства). Регулярно проверяйте подключенные
+    двухфакторную авторизацию. Регулярно проверяйте подключенные
     устройства в своих аккаунтах, если видите в списке незнакомое —
     отключите, смените пароли.
     {% if trigger_theme %}
@@ -103,8 +99,8 @@
     или <a href=https://meduza.io/feature/2019/08/23/chto-sotrudniki-tsentra-e-delayut-na-mitingah-pochemu-oni-vse-odinakovye-otkuda-berutsya-dela-za-reposty>эшников</a>
     на таких ивентах возрастает в разы. 
 {% else %}
-    <span>Похоже, что вы решили не привлекать к себе излишнее внимание названием</span>, 
-    и поэтому мы можем волноваться за вашу безопасность немножко меньше &lt3
+    <span>Мы рады, что вы решили не привлекать к себе излишнее внимание названием</span>, 
+    значит мы можем волноваться за вашу безопасность немножко меньше &lt3
 {% endif %}
 </p>
 
@@ -193,10 +189,9 @@
     триггерных цветов (радуга, сине-желтый), не брать с
     собой антивоенную, фем-, квир-символику и агитматериалы.
     Вы собрались на целиком законное не подозрительное мероприятие,
-    не дарите ментам повод его сорвать. Мы считаем,
-    что рекомендации из первой части этого документа будут
-    полезны абсолютно всем, и крайне рекомендуем обезопасить
-    свои устройства, прочитать инструкции ОВД-инфо и знать свои права.
+    не дарите ментам повод его сорвать. Перестрахуемся и дадим наш 
+     стандартный совет: обезопасить свои устройства,
+     прочитать инструкции ОВД-инфо и знать свои права.
     Желаем вам хорошо провести время :)
 </p>
 {% endif %}
