--- a/texts/texts.j2
+++ b/texts/texts.j2
@@ -8,7 +8,7 @@
         не все из них разделяют ваши ценности и убеждения, некоторые могут быть тяжелыми в общении.
         Учитывая ситуацию в стране, может быть рискованно рассказывать
         незнакомцам личную информацию и делиться с ними потенциально подсудными мнениями.
-        Используя Эзопов язык, можно выразиться достаточно понятно для собеседников,
+        Используя эзопов язык, можно выразиться достаточно понятно для собеседников 
         и не подставиться под статью.
     {% endif %}
 </p>
@@ -22,7 +22,7 @@
     но для большинства непубличных людей это может нести больше рисков,
     привлекая внимание недоброжелателей.
     {% if trigger_theme or arrests or trigger_title %}
-        В некоторых случаях можно ждать визита полиции или <a href =https://meduza.io/feature/2019/08/23/chto-sotrudniki-tsentra-e-delayut-na-mitingah-pochemu-oni-vse-odinakovye-otkuda-berutsya-dela-za-reposty> сотрудников центра “Э</a>, в народе известных как "эшники".
+        В некоторых случаях можно ждать визита полиции или <a href=https://meduza.io/feature/2019/08/23/chto-sotrudniki-tsentra-e-delayut-na-mitingah-pochemu-oni-vse-odinakovye-otkuda-berutsya-dela-za-reposty> сотрудников центра “Э</a>, в народе известных как "эшники".
         <br>Личный аккаунт легко связать с владельцем: узнать связанные с ним номера
         телефонов, найти другие соцсети по фотографиям профиля.
         Помните, что участие в мероприятии и его организация –
@@ -31,8 +31,8 @@
 {% else %}
     <span>Если вы анонсируете ивент анонимно</span>,
     потенциальным недоброжелателям будет труднее вас достать,
-    а значит безопасность повышается! С другой стороны, вам может быть тяжелее привлечь
-    аудиторию. Сопоставляйте личные риски с потенциальной пользой. 
+    а значит, безопасность повышается! С другой стороны, вам может быть тяжелее привлечь
+    новую аудиторию. Сопоставляйте личные риски с потенциальной пользой. 
 {% endif %}
 </p>
 
@@ -40,7 +40,7 @@
 {% if participant_db %}
     {% if trigger_theme %}
          <span>Сохраняя личные данные участни:ц</span>,
-        стоит понимать, что все эти люди могут оказаться в опасности в случае вашего задержания  
+        стоит понимать, что эти люди могут оказаться в опасности,   
         если полиция получит доступ к вашим устройствам.
         Рекомендуем не хранить чувствительные данные, либо хранить их в зашифрованном виде: например,
         на сервисе Cpryptpad можно создать документ с паролем и датой уничтожения. 
@@ -100,7 +100,7 @@
     на таких ивентах возрастает в разы. 
 {% else %}
     <span>Мы рады, что вы решили не привлекать к себе излишнее внимание названием</span>, 
-    значит мы можем волноваться за вашу безопасность немножко меньше &lt3
+    значит, мы можем волноваться за вашу безопасность немножко меньше &lt3
 {% endif %}
 </p>
 
@@ -118,26 +118,26 @@
         Рассылайте адрес и время ивента уже проверенным участни:цам, 
         не публикуйте эти данные открыто.
         Помните о случаях, когда менты втирались в доверие к людям 
-        в соцсетях и подталкивали к совершению противозаконных
-        действий, убеждая задонатить ВСУ, поджечь военкомат,
+        в соцсетях и подталкивали к противозаконным
+        действиям, убеждая задонатить ВСУ, поджечь военкомат,
         или распространить “фейки” про российскую армию,
-        а затем сами же шили из этого дело. Будьте бдительны. </li>
+        а затем — сами же шили из этого дело. Будьте бдительны. </li>
     <li> Убедитесь, что вы выполнили все инструкции
         <a href=https://cryptpad.fr/pad/#/2/pad/edit/Uk1nCFBbRWWuFSA59tECZ4JL>
-        отсюда </a> и убедительно
+        отсюда </a> и 
         призовите всех участни:ц также им следовать. Это важно. Объясните
-        всем, что если полиция получает доступ к устройствам одной из
+        им, что если полиция получает доступ к устройствам одной из
         вас – она получает доступ ко всем через ваши общие чаты.
-        Ваша цифровая безопасность нужна не только для вас, она защищает
+        Ваша цифровая безопасность нужна не только для вас: она защищает
         всех людей, с которыми вы связаны.  Пусть все установят бот
         ОВД-инфо и прочитают “инструкцию идеального задержанного”. </li>
     <li> Выбирайте место проведения ивента с умом. 
         Вам не подойдут пространства, где много посторонних людей. 
-        Лучше всего забронировать целое помещение, в идеале - с черным ходом.
+        Лучше всего забронировать целое помещение, в идеале — с черным ходом.
         Ищите те, где владельцы придерживаются схожих с вами взглядов. 
-        Если сможете выделить специального человека, 
-        который будет сидеть возле входа\окна 
-        и сможет предупредить остальных о приезде полиции – вообще здорово. 
+        Если сможете назначить специального человека, 
+        который будет сидеть возле входа/окна 
+        и сможет предупредить остальных о приезде полиции — вообще здорово. 
         Хороший вариант – собраться у кого-нибудь дома. </li>
     <li> Не берите с собой никакую символику, листовки,
         не одевайтесь в триггерные цвета (радуга, жёлто-голубой).
@@ -185,12 +185,13 @@
         ни с анонимностью чатов.
     {% endif %}
     
-    На всякий случай, рекомендуем не одеваться в одежду
+    На всякий случай рекомендуем не одеваться в одежду
     триггерных цветов (радуга, сине-желтый), не брать с
     собой антивоенную, фем-, квир-символику и агитматериалы.
-    Вы собрались на целиком законное не подозрительное мероприятие,
+    Вы собрались на целиком законное неподозрительное мероприятие —
     не дарите ментам повод его сорвать. Перестрахуемся и дадим наш 
-     стандартный совет: обезопасить свои устройства,
+     стандартный совет: <a href=https://cryptpad.fr/pad/#/2/pad/view/EcdYxUGN8uhj8EzWFxvI89cuUu7c2GCq3NiCL-8qngo/>обезопасить</a> 
+     свои устройства,
      прочитать инструкции ОВД-инфо и знать свои права. <br>
     Желаем вам хорошо провести время :)
 </p>
